--- a/style.css
+++ b/style.css
@@ -6,6 +6,62 @@
   box-sizing: border-box;
 }
 
+.banner {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url(./images/dotabanner.jpg);
+  background-size: cover;
+  background-position: center;
+  background-size: 130%;
+  background-color: #cccccc;
+  background-attachment: fixed;
+}
+
+.nav_links li,
+.nav_links a {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  color: #edf0f1;
+  text-decoration: none;
+}
+
+.nav_links {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  gap: 50px;
+}
+
+.nav_links li a {
+  transition: all 0.3s ease 0s;
+}
+
+.navbar ul li {
+  position: relative;
+}
+
+.navbar ul li::after {
+  content: "";
+  height: 3px;
+  width: 0;
+  background: rgba(207, 23, 23, 0.9);
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  transition: 0.5s;
+}
+
+.navbar ul li:hover::after {
+  width: 100%;
+}
+
+.h_header {
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  place-items: center;
+}
+
 .hero_name {
   display: grid;
   grid-template-rows: 1;
@@ -14,8 +70,13 @@
   font-family: "Supermercado One", cursive;
 }
 
+.hero-name {
+  text-decoration: none;
+  color: white;
+}
+
 .hero-name:hover {
-  color: aqua;
+  color: rgb(163, 13, 13);
   cursor: pointer;
 }
 
