--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
 .nav_links li,
 .nav_links a {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Supermercado One", cursive;
   font-weight: 500;
   font-size: 14px;
   color: #edf0f1;
@@ -132,7 +132,7 @@
 
 .numberofmatcheslasthour .text h1 {
   color: black;
-  font-family: "Kaushan Script";
+  font-family: "Supermercado One", cursive;
 }
 
 .numberofmatcheslasthour:hover .text {
@@ -160,7 +160,7 @@
 
 .numberofplayers .text h1 {
   color: black;
-  font-family: "Kaushan Script";
+  font-family: "Supermercado One", cursive;
 }
 
 .numberofplayers:hover .text {
@@ -188,7 +188,7 @@
 
 .numberoferrorslastday .text h1 {
   color: black;
-  font-family: "Kaushan Script";
+  font-family: "Supermercado One", cursive;
 }
 
 .numberoferrorslastday:hover .text {
@@ -216,7 +216,7 @@
 
 .numberofapihitslastday .text h1 {
   color: black;
-  font-family: "Kaushan Script";
+  font-family: "Supermercado One", cursive;
 }
 
 .numberofapihitslastday:hover .text {
@@ -244,7 +244,7 @@
 
 .numberofmatcheslastday .text h1 {
   color: black;
-  font-family: "Kaushan Script";
+  font-family: "Supermercado One", cursive;
 }
 
 .numberofmatcheslastday:hover .text {
@@ -257,4 +257,8 @@
   grid-template-columns: 1fr 1fr 1fr;
   place-items: center;
   background-color: black;
+}
+
+.text {
+  font-family: "Supermercado One", cursive;
 }
